fixes bug 246264 "nsHttpChannel may leak mResponseHead" r=pedemont sr=bryner